--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -53,11 +53,13 @@
         <li>Assignment 2</li>
         <li>Assignment 3</li>
       </ul>
+      <h3><a href="challenges/index.html">Challenges</a></h3>
     </section>
   </main>
 
   <footer>
-     <a href="mailto:&#097;&#105;&#108;&#101;&#101;&#110;&#046;&#121;&#097;&#110;&#103;&#051;&#050;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#097;&#105;&#108;&#101;&#101;&#110;&#046;&#121;&#097;&#110;&#103;&#051;&#050;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
+    <a
+      href="mailto:&#097;&#105;&#108;&#101;&#101;&#110;&#046;&#121;&#097;&#110;&#103;&#051;&#050;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#097;&#105;&#108;&#101;&#101;&#110;&#046;&#121;&#097;&#110;&#103;&#051;&#050;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
 
     <a href="http://validator.w3.org/check?uri=referer">Valid HTML5</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
