--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -49,11 +49,10 @@
     <section>
       <h3>Assignments</h3>
       <ul>
-        <li>Assignment 1</li>
-        <li>Assignment 2</li>
+        <li><a href = "challenges/index.html">Challenges</a></li>
+        <li><a href = "assignments/function-experiment.html">Function Experiment</a></li>
         <li>Assignment 3</li>
       </ul>
-      <h3><a href="challenges/index.html">Challenges</a></h3>
     </section>
   </main>
 
