--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -40,7 +40,7 @@
       </ul>
       <h3>Development</h3>
       <ul>
-        <li>Development 1</li>
+        <li><a href = "process/development/topic-brainstorm.html">Development 1</a></li>
         <li>Development 2</li>
         <li>Development 3</li>
       </ul>
