add basic converter

--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -51,7 +51,7 @@
       <ul>
         <li><a href = "challenges/index.html">Challenges</a></li>
         <li><a href = "assignments/function-experiment.html">Function Experiment</a></li>
-        <li>Assignment 3</li>
+        <li><a href = "assignments/basic-converter/index.html">Basic Converter</a></li>
       </ul>
     </section>
   </main>
