--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -34,7 +34,7 @@
     <section>
       <h3>Research</h3>
       <ul>
-        <li>Research 1</li>
+        <li><a href = "process/research/comparative.html">Comparative Research</a></li>
         <li>Research 2</li>
         <li>Research 3</li>
       </ul>
@@ -52,6 +52,8 @@
         <li><a href = "challenges/index.html">Challenges</a></li>
         <li><a href = "assignments/function-experiment.html">Function Experiment</a></li>
         <li><a href = "assignments/basic-converter/index.html">Basic Converter</a></li>
+        <li><a href = "assignments/advanced-converter/index.html">Advanced Converter</a></li>
+
       </ul>
     </section>
   </main>
