--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -6,13 +6,14 @@
   <title>Aileen's Portal Page</title>
   <link href="https://fonts.googleapis.com/css?family=Heebo&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <header>
-    <div id="mySketch"><a>sketch here</a></div>
+    <div id="mySketch"><a></a></div>
     <h1>Aileen Yang</h1>
     <h2>DES 157 - Interaction Design 2 - Winter 2020</h2>
   </header>
@@ -65,6 +66,7 @@
     <a href="http://validator.w3.org/check?uri=referer">Valid HTML5</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
