--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -26,7 +26,7 @@
       </ul>
       <h3>Studios</h3>
       <ul>
-        <li>Studio 1</li>
+        <li><a href = "madlib/madlib.html">Studio 1</a></li>
         <li>Studio 2</li>
         <li>Studio 3</li>
       </ul>
