--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -36,7 +36,7 @@
       <h3>Research</h3>
       <ul>
         <li><a href = "process/research/comparative.html">Comparative Research</a></li>
-        <li>Research 2</li>
+        <li><a href = "process/research/academic.html">Academic Research</a></li>
         <li>Research 3</li>
       </ul>
       <h3>Development</h3>
