--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -27,7 +27,7 @@
       <h3>Studios</h3>
       <ul>
         <li><a href = "madlib/madlib.html">Studio 1</a></li>
-        <li>Studio 2</li>
+        <li><a href = "studio-2/index.html" >Studio 2</a></li>
         <li>Studio 3</li>
       </ul>
     </section>
