--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -37,7 +37,7 @@
       <ul>
         <li><a href = "process/research/comparative.html">Comparative Research</a></li>
         <li><a href = "process/research/academic.html">Academic Research</a></li>
-        <li>Research 3</li>
+        <li><a href = "process/research/audience.html">Audience Research</a></li>
       </ul>
       <h3>Development</h3>
       <ul>
