--- a/des157-wi20/process/development/sketches.html
+++ b/des157-wi20/process/development/sketches.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Audience Research</title>
+  <title>Sketches</title>
   <link href="https://fonts.googleapis.com/css?family=Heebo&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-  <h1>Audience Research</h1>
-  <img src = "images/swot.jpg" width = 600px class = "image">
-  <p>Through this analysis, I realized that my product is more informative, but may capture less attention from the audience as there is more reading and less interaction. I hope by combining colorful graphics that I can overcome these issues.</p>
+  <h1>Sketches</h1>
+  <img src = "images/storyboard.jpg" width = 600px class = "image">
   <footer>
     <a href="https://validator.w3.org/check?uri=referer">Valid HTML</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
