--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -42,7 +42,7 @@
       <h3>Development</h3>
       <ul>
         <li><a href = "process/development/topic-brainstorm.html">Development 1</a></li>
-        <li>Development 2</li>
+        <li><a href = "process/development/sketches.html">Development 2</a></li>
         <li>Development 3</li>
       </ul>
     </section>
