--- a/des157-wi20/process/development/sketches.html
+++ b/des157-wi20/process/development/sketches.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1>Sketches</h1>
-  <img src = "images/storyboard.jpg" width = 600px class = "image">
+  <img src = "images/storyboard.JPG" width = 600px class = "image">
   <footer>
     <a href="https://validator.w3.org/check?uri=referer">Valid HTML</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
