--- a/des157-wi20/process/research/audience.html
+++ b/des157-wi20/process/research/audience.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1>Audience Research</h1>
-  <img src = "images/swot.jpg" width = 600px class = "image">
+  <img src = "images/swot.JPG" width = 600px class = "image">
   <p>Through this analysis, I realized that my product is more informative, but may capture less attention from the audience as there is more reading and less interaction. I hope by combining colorful graphics that I can overcome these issues.</p>
   <footer>
     <a href="https://validator.w3.org/check?uri=referer">Valid HTML</a>
