--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -28,7 +28,7 @@
       <ul>
         <li><a href = "madlib/madlib.html">Studio 1</a></li>
         <li><a href = "studio-2/index.html" >Studio 2</a></li>
-        <li>Studio 3</li>
+        <li><a href = "studio-3/index.html">Studio 3</a></li>
       </ul>
     </section>
 
