--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -44,6 +44,7 @@
         <li><a href = "process/development/topic-brainstorm.html">Development 1</a></li>
         <li><a href = "process/development/sketches.html">Development 2</a></li>
         <li><a href = "process/development/comp1.html">Development 3</a></li>
+        <li><a href = "process/development/paper-prototype.html">Development 4</a></li>
       </ul>
     </section>
 
