add studio 4 to repository

--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -29,6 +29,7 @@
         <li><a href = "madlib/madlib.html">Studio 1</a></li>
         <li><a href = "studio-2/index.html" >Studio 2</a></li>
         <li><a href = "studio-3/index.html">Studio 3</a></li>
+        <li><a href = "studio-4/index.html">Studio 4</a></li>
       </ul>
     </section>
 
