--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -46,6 +46,7 @@
         <li><a href = "process/development/sketches.html">Development 2</a></li>
         <li><a href = "process/development/comp1.html">Development 3</a></li>
         <li><a href = "process/development/paper-prototype.html">Development 4</a></li>
+        <li><a href = "process/development/comp2.html">Development 5</a></li>
       </ul>
     </section>
 
