--- a/des157-wi20/index.html
+++ b/des157-wi20/index.html
@@ -22,7 +22,7 @@
     <section>
       <h3>Final Project</h3>
       <ul>
-        <li>Project Title</li>
+        <li><a href = "final/index.html">Digital Sustainability Awareness</a></li>
       </ul>
       <h3>Studios</h3>
       <ul>
